--- a/app/src/main/res/layout/item_jokes.xml
+++ b/app/src/main/res/layout/item_jokes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,8 +7,8 @@
     <TextView
         android:id="@+id/text_jokes"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
 
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
