--- a/app/src/main/res/layout/item_jokes.xml
+++ b/app/src/main/res/layout/item_jokes.xml
@@ -7,8 +7,10 @@
     <TextView
         android:id="@+id/text_jokes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
+        android:layout_height="58dp"
+        android:maxLines="1"
+        android:textColor="@color/black"
+        android:textSize="14sp"
         />
 
 </RelativeLayout>
