--- a/app/src/main/res/layout/item_jokes.xml
+++ b/app/src/main/res/layout/item_jokes.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/text_jokes"
@@ -10,7 +10,8 @@
         android:layout_height="58dp"
         android:maxLines="1"
         android:textColor="@color/black"
-        android:textSize="14sp"
+        android:textSize="18sp"
+        android:gravity="center_vertical"
         />
 
 </RelativeLayout>
