--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,10 +3,12 @@
     <item
         android:id="@+id/navigationJoke"
         android:title="@string/jokes"
+        android:icon="@drawable/icons8_jokes"
         />
 
     <item
         android:id="@+id/navigationBrowser"
         android:title="@string/browser"
+        android:icon="@drawable/icons8_browser"
         />
 </menu>
