--- a/app/src/main/res/layout/content_fragment_jokes.xml
+++ b/app/src/main/res/layout/content_fragment_jokes.xml
@@ -1,42 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/jokeRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/et_count"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/et_count"
+        android:layout_width="160dp"
+        android:layout_height="0dp"
+        android:layout_gravity="bottom"
+        android:foregroundGravity="bottom"
+        android:hint="@string/count_of_jokes"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_jokes"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_jokes"
+        android:layout_width="160dp"
+        android:layout_height="0dp"
+        android:text="@string/reload"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@id/et_count"
+
         />
-
-        <EditText
-            android:id="@+id/et_count"
-            android:layout_width="160dp"
-            android:layout_height="0dp"
-            android:layout_gravity="bottom"
-            android:foregroundGravity="bottom"
-            android:hint="@string/count_of_jokes"
-            android:inputType="number"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/btn_jokes"
-            />
-
-        <Button
-            android:id="@+id/btn_jokes"
-            android:layout_width="150dp"
-            android:layout_height="0dp"
-            android:text="@string/reload"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/et_count"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_weight="1"
-
-            />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
