--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.browser.BrowserFragment">
+    tools:context=".presentation.fragments.browser.BrowserFragment">
 
     <WebView
         android:id="@+id/webView"
