--- a/app/src/main/res/layout/fragment_jokes.xml
+++ b/app/src/main/res/layout/fragment_jokes.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.jokes.JokesFragment">
+    tools:context=".presentation.fragments.jokes.JokesFragment">
 
     <include layout="@layout/content_fragment_jokes"/>
 
